<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_collect"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/teal_700">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="50dp"
                android:orientation="vertical"
                android:background="@drawable/style_spinner"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/assembly_selection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/assembly_selection"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"/>

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
                    android:spinnerMode="dialog"
                    android:layout_marginBottom="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@drawable/style_menu">

                <EditText
                    android:id="@+id/enter_theme"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:hint="@string/enter_theme"
                    android:maxHeight="100dp"
                    android:minHeight="100dp"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/add_theme"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/style_button"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:minHeight="48dp"
                    android:gravity="center"
                    android:text="@string/add_theme"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="50dp">

                <TextView
                    android:id="@+id/next_add_questions"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/style_button"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:minHeight="48dp"
                    android:gravity="center"
                    android:text="@string/next_add_questions" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/view_theme"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/style_button"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:minHeight="48dp"
                        android:gravity="center"
                        android:text="@string/view_theme" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:layout_gravity="right"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="12dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>