<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/teal_700">

    <TextView
        android:id="@+id/title_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/setting_application"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10sp"
            android:text="Выбор языка приложения"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/radio_group2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonRussian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/style_menu"
                android:text="Русский"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginRight="5dp" />

            <RadioButton
                android:id="@+id/radioButtonEnglish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/style_menu"
                android:text="English"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginLeft="5dp"/>
        </RadioGroup>

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10sp"
        android:text="Выбор языка приложения"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/load_base"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/style_button"
        android:gravity="center"
        android:minHeight="48dp"
        android:text="@string/load_file"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/clear_base"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/style_button"
        android:gravity="center"
        android:minHeight="48dp"
        android:text="@string/clean_base"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <FrameLayout
        android:id="@+id/container_new_visual_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>